[package]
name = "gcstool"
version = "0.1.0"
authors = ["Thomas Hurst <tom@hur.st>"]

[dependencies]
sha-1 = "0.7.0"
sha2 = "0.7.0"
md-5 = "0.7.0"
blake2 = "0.7.0"
byteorder = "1.2.2"
memchr = "2"
rayon = "1.0.1"

[dependencies.linereader]
version = "0.1.0"
git = "https://github.com/Freaky/rust-linereader.git"

[dependencies.bitrw]
version = "0.1.0"
git = "https://github.com/Freaky/rust-bitrw.git"

[dependencies.clap]
version = "~2.31.2"
default-features = false

[profile.release]
lto = true
